CREATE TYPE "vehicle_type" AS ENUM (
  'spacecraft',
  'shuttle',
  'space_station',
  'probe',
  'interplanetary_ship'
);

CREATE TYPE "observer_role" AS ENUM (
  'commander',
  'pilot',
  'engineer',
  'scientist',
  'passenger'
);

CREATE TYPE "celestial_body_type" AS ENUM (
  'planet',
  'satellite',
  'asteroid',
  'comet',
  'star'
);

CREATE TABLE "vehicle" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) NOT NULL,
  "registry_code" varchar(50) UNIQUE NOT NULL,
  "type" vehicle_type NOT NULL,
  "crew_capacity" integer NOT NULL CHECK (crew_capacity >= 0)
);

CREATE TABLE "observer" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) NOT NULL,
  "role" observer_role NOT NULL,
  "vehicle_id" integer NOT NULL
);

CREATE TABLE "field_of_view" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "description" text,
  "start_time" timestamptz NOT NULL,
  "end_time" timestamptz NOT NULL CHECK (end_time > start_time),
  "viewing_angle_deg" numeric(6,3) NOT NULL CHECK (viewing_angle_deg > 0 AND viewing_angle_deg <= 180),
  "distance_km" numeric(15,3) NOT NULL CHECK (distance_km > 0)
);

CREATE TABLE "observer_field_of_view" (
  "observer_id" integer NOT NULL,
  "fov_id" integer NOT NULL,
  PRIMARY KEY ("observer_id", "fov_id")
);

CREATE TABLE "celestial_body" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) NOT NULL,
  "type" celestial_body_type NOT NULL,
  "has_rings" boolean NOT NULL DEFAULT false,
  "mass_kg" numeric(40,3) NOT NULL CHECK (mass_kg > 0),
  "equatorial_radius_km" numeric(15,6) NOT NULL CHECK (equatorial_radius_km > 0),
  "polar_radius_km" numeric(15,6) NOT NULL CHECK (polar_radius_km > 0),
  "volume_km3" numeric(30,3) NOT NULL CHECK (volume_km3 > 0),
  "surface_area_km2" numeric(20,3) NOT NULL CHECK (surface_area_km2 > 0),
  "parent_body_id" integer
);

CREATE TABLE "field_of_view_celestial_body" (
  "fov_id" integer NOT NULL,
  "body_id" integer NOT NULL,
  PRIMARY KEY ("fov_id", "body_id")
);

CREATE INDEX ON "observer" ("vehicle_id");

CREATE INDEX ON "observer_field_of_view" ("fov_id");

CREATE INDEX ON "celestial_body" ("parent_body_id");

CREATE INDEX ON "field_of_view_celestial_body" ("body_id");

ALTER TABLE "observer" ADD FOREIGN KEY ("vehicle_id") REFERENCES "vehicle" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "observer_field_of_view" ADD FOREIGN KEY ("observer_id") REFERENCES "observer" ("id")
    DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "observer_field_of_view" ADD FOREIGN KEY ("fov_id") REFERENCES "field_of_view" ("id")
    DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "celestial_body" ADD FOREIGN KEY ("parent_body_id") REFERENCES "celestial_body" ("id")
    DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "field_of_view_celestial_body" ADD FOREIGN KEY ("fov_id") REFERENCES "field_of_view" ("id")
    DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "field_of_view_celestial_body" ADD FOREIGN KEY ("body_id") REFERENCES "celestial_body" ("id")
    DEFERRABLE INITIALLY IMMEDIATE;
